force-app/main/default/objects/Order/fields/BP_has_team__c.field-meta.xml
<CustomField>
    <fullName>BP_has_team__c</fullName>
    <formula>IF(BuildingProject__r.Has_team__c = true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP has team</label>
    <type>Checkbox</type>
</CustomField>