force-app/main/default/objects/Order/fields/Cost_of_goods__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_goods__c</fullName>
    <label>Cost of goods</label>
    <length>20</length>
    <type>Text</type>
</CustomField>