force-app/main/default/objects/Order/fields/DeliveryConditions__c.field-meta.xml
<CustomField>
    <fullName>DeliveryConditions__c</fullName>
    <label>Delivery Conditions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>