force-app/main/default/objects/Order/fields/Gross_margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_margin__c</fullName>
    <description>Deckungsbeitrag</description>
    <label>Gross margin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>