force-app/main/default/objects/Order/fields/GrossTotalWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossTotalWeight__c</fullName>
    <label>Gross Total Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>