force-app/main/default/objects/Order/fields/GrossValue__c.field-meta.xml
<CustomField>
    <fullName>GrossValue__c</fullName>
    <label>Gross Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>