force-app/main/default/objects/Order/fields/Has_BP__c.field-meta.xml
<CustomField>
    <fullName>Has_BP__c</fullName>
    <formula>IF(ISBLANK(BuildingProject__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has BP</label>
    <type>Checkbox</type>
</CustomField>