force-app/main/default/objects/Order/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>