force-app/main/default/objects/Order/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>Order Type</label>
    <length>155</length>
    <type>Text</type>
</CustomField>