force-app/main/default/objects/Order/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <label>Payment Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>