force-app/main/default/objects/Order/fields/Percent1__c.field-meta.xml
<CustomField>
    <fullName>Percent1__c</fullName>
    <label>Percent 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>