force-app/main/default/objects/Order/fields/Percent2__c.field-meta.xml
<CustomField>
    <fullName>Percent2__c</fullName>
    <label>Percent 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>