force-app/main/default/objects/Order/fields/Percent3__c.field-meta.xml
<CustomField>
    <fullName>Percent3__c</fullName>
    <label>Percent 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>