force-app/main/default/objects/Order/fields/Responsible_Employee__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Employee__c</fullName>
    <label>Responsible Employee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>