force-app/main/default/objects/Order/fields/ResubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>ResubmissionDate__c</fullName>
    <label>Resubmission Date</label>
    <type>Date</type>
</CustomField>