force-app/main/default/objects/Order/fields/ShippingConditions__c.field-meta.xml
<CustomField>
    <fullName>ShippingConditions__c</fullName>
    <label>Shipping Conditions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>