force-app/main/default/objects/Order/fields/ShippingRecipient__c.field-meta.xml
<CustomField>
    <fullName>ShippingRecipient__c</fullName>
    <label>Shipping Recipient</label>
    <type>TextArea</type>
</CustomField>