force-app/main/default/objects/Order/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <description>The comarch field &quot;Betreuer&quot; of an order (Vertriebsauftrag).</description>
    <label>Supervisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>