force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>BuildingProject__c</columns>
    <columns>GrossValue__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>SalesRepresentative__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Aufträge</label>
</ListView>